--- a/SensorCollector/src/main/res/layout/tab_home.xml
+++ b/SensorCollector/src/main/res/layout/tab_home.xml
@@ -2,10 +2,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="uk.ac.man.cs.leeming.sensorcollector.MainActivity$PlaceholderFragment">
 
     <LinearLayout
@@ -23,9 +19,38 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="top"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
             android:maxLines="200"
             android:scrollbars="vertical"
             android:text="@string/hello_world" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:text="Delay start"
+                android:textSize="30sp"
+                android:id="@+id/textView" />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:ems="10"
+                android:id="@+id/delayStartInput"
+                android:layout_gravity="center_horizontal"
+                android:hint="Delay (s)"/>
+
+
+
+        </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
@@ -43,14 +68,14 @@
             <Button
                 android:id="@+id/btnStart"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_gravity="left"
                 android:text="@string/start" />
 
             <Button
                 android:id="@+id/btnStop"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
                 android:layout_gravity="left"
                 android:text="@string/stop"
                 android:visibility="gone" />
